@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\burningsVideo.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\collisionResponseAnimator.cpp"
 				>
 			</File>
@@ -207,6 +211,10 @@
 			</File>
 			<File
 				RelativePath=".\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\makeColorKeyTexture.cpp"
 				>
 			</File>
 			<File
